crates/ink/tests/ui/contract/fail/constructor-unsafe.stderr
error: ink! constructors must not be unsafe
 --> tests/ui/contract/fail/constructor-unsafe.rs:8:13
  |
8 |         pub unsafe fn constructor() -> Self {
  |             ^^^^^^
